--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,12 @@
 extends layout
 
 block vars
-  - var title='Ethereum Project'
+  - var title='Vapory Project'
 
 block content
   .main-tutorial.scrollme.intro
     .scrollme.row.introduction.animateme(data-when="span", data-from="0", data-to="1", data-opacity="0.2", data-translatey="300", data-easing="linear")
-      h1.animateme(data-when="span", data-from="0", data-to="1", data-scale="0.75", data-translatey="100", data-easing="linear") Ethereum: Build unstoppable applications
+      h1.animateme(data-when="span", data-from="0", data-to="1", data-scale="0.75", data-translatey="100", data-easing="linear") Vapory: Build unstoppable applications
 
   .legal-modal
     .legal-text
@@ -23,7 +23,7 @@ block content
         .col-md-6
           h2 Build unstoppable applications
 
-          p Ethereum is a  
+          p Vapory is a  
             strong decentralized platform that runs smart contracts
             | : applications that run exactly as programmed without any possibility of downtime, censorship, fraud or third-party interference.
 
@@ -32,9 +32,9 @@ block content
           
           p This enables developers to create markets, store registries of debts or promises, move funds in accordance with instructions given long in the past (like a will or a futures contract) and many other things that have not been invented yet, all without a middleman or counterparty risk.
 
-          p The project was bootstrapped via an ether presale in August 2014 by fans all around the world. It is developed by the  
-            a(href='./foundation') Ethereum Foundation
-            |, a Swiss non-profit, with contributions from great minds across the globe.
+          p The project was started in the Spring of 2015 by an army of two. It is now part of the Tetcoin Family of Cryptocurrencies. 
+            a(href='https://core.tetcoin.org') Tetcore
+            | is a framework for blockchain innovation with Vapory at the core of its cross chain stack.
 
         .col-md-6
           .row
@@ -65,28 +65,28 @@ block content
           h2 Smart money, smart wallet
 
           p The  
-            strong Ethereum Wallet  
-            | is a gateway to decentralized applications on the Ethereum blockchain. It allows you to hold and secure ether and other crypto-assets built on Ethereum, as well as write, deploy and use smart contracts.
+            strong Vapory Wallet  
+            | is a gateway to decentralized applications on the Vapory blockchain. It allows you to hold and secure ether and other crypto-assets built on Vapory, as well as write, deploy and use smart contracts.
 
           a(href=mistReleaseOSX).button.mac.ethereum-wallet.require-legal
             strong Download
-            | Ethereum Wallet for Mac OS X
+            | Vapory Wallet for Mac OS X
 
           a(href=mistReleaseWin64).button.win64.ethereum-wallet.require-legal
             strong Download
-            |  Ethereum Wallet for Windows 64 bits
+            |  Vapory Wallet for Windows 64 bits
 
           a(href=mistReleaseWin32).button.win32.ethereum-wallet
             strong Download
-            |  Ethereum Wallet for Windows 32 bits (requires Command Line tools)
+            |  Vapory Wallet for Windows 32 bits (requires Command Line tools)
 
           a(href="https://github.com/ethereum/mist/releases/latest").button.linux.ethereum-wallet.require-legal
             strong Download
-            |  Ethereum Wallet for Linux
+            |  Vapory Wallet for Linux
 
           a(href="https://github.com/ethereum/mist/releases/latest").allversions.button.ethereum-wallet.require-legal
             strong Download
-            |  Ethereum Wallet (Windows 64 bits, Linux and OS X)
+            |  Vapory Wallet (Windows 64 bits, Linux and OS X)
 
           a(href="https://github.com/ethereum/mist/releases/latest").allversions.ethereum-wallet.link.require-legal See all versions
 
@@ -96,7 +96,7 @@ block content
               .wallet-figure-outer.scrollme
                 figure.wallet-figure.scrollme.animateme(data-when="span", data-from="0.425", data-to="0.475", data-opacity="0", data-translatey="-100")
                   .wallet-01.animateme(data-when="enter", data-from="0.9", data-to="0", data-opacity="0.5", data-scale="0.8", data-translatey="100")
-                  .caption.animateme(data-when="enter", data-from="0.9", data-to="0.1", data-opacity="0.5", data-scale="0.8", data-translatey="100") Hold ether or any Ethereum-based token in safe wallets
+                  .caption.animateme(data-when="enter", data-from="0.9", data-to="0.1", data-opacity="0.5", data-scale="0.8", data-translatey="100") Hold ether or any Vapory-based token in safe wallets
 
                 figure.wallet-figure.scrollme.animateme(data-when="span", data-from="0.67", data-to="0.68", data-opacity="0", data-translatey="-100")
                   .wallet-02.animateme(data-when="span", data-from="0.5", data-to="0.45", data-opacity="0", data-translatey="100")
@@ -108,7 +108,7 @@ block content
 
   .col-md-12.scrollme.main-menu
     .breadcrumb.index.animateme(data-when="exit", data-from="1", data-to="0.8", data-opacity="0", data-translatey="-20")
-      strong Ethereum
+      strong Vapory
       a(href="#community") Join the Community
       a(href="./donate").donation-button Donate
 
