--- a/views/greeter.pug
+++ b/views/greeter.pug
@@ -15,7 +15,7 @@ block content
     a(href="/cli").previous Previous
     a(href="/token").next Next
 
-  div#tutorial-start.main-tutorial.ether-tutorial.inner-header.inner-page.even
+  div#tutorial-start.main-tutorial.vapor-tutorial.inner-header.inner-page.even
     .container
       .row
         .col-md-6.tutorial.scrollme
