--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block vars
-  - var title='Vapory Project'
+  - var title='Vapory Developers'
 
 block content
   .main-tutorial.scrollme.intro
@@ -40,16 +40,16 @@ block content
           .row
             .col-md-12
               .server-figure.scrollme
-                figure.ethereum-explain.scrollme.animateme(data-when="span", data-from="0.25", data-to="0.26", data-opacity="0")
+                figure.vapory-explain.scrollme.animateme(data-when="span", data-from="0.25", data-to="0.26", data-opacity="0")
                   .explain-01.animateme(data-when="span", data-from="0.1", data-to="0", data-opacity="0.5", data-scale="0.8")
 
-                figure.ethereum-explain.scrollme.animateme(data-when="span", data-from="0.35", data-to="0.37", data-opacity="0")
+                figure.vapory-explain.scrollme.animateme(data-when="span", data-from="0.35", data-to="0.37", data-opacity="0")
                   .explain-02.animateme(data-when="span", data-from="0.26", data-to="0.25", data-opacity="0")
 
-                figure.ethereum-explain.scrollme.animateme(data-when="span", data-from="0.5", data-to="0.6", data-opacity="0")
+                figure.vapory-explain.scrollme.animateme(data-when="span", data-from="0.5", data-to="0.6", data-opacity="0")
                   .explain-02b.animateme(data-when="span", data-from="0.37", data-to="0.35", data-opacity="0")
 
-                figure.ethereum-explain.scrollme
+                figure.vapory-explain.scrollme
                   .explain-03.animateme(data-when="span", data-from="0.6", data-to="0.5", data-opacity="0")
 
           .row
