--- a/views/mixins/figures.pug
+++ b/views/mixins/figures.pug
@@ -9,7 +9,7 @@ mixin gethFigureExit()
     .geth-logo.animateme(data-when="exit", data-to="0.1", data-from="0.0", data-opacity="0")
 
 
-mixin etherFigure()
+mixin vaporFigure()
   figure.ether.scrollme
     .ether-screen.animateme(data-when="enter", data-from="0.6", data-to="0", data-translatey="500")
     .ether-pacman.animateme(data-when="enter", data-from="0.55", data-to="0.5", data-opacity="0")
