--- a/views/mixins/recipes.pug
+++ b/views/mixins/recipes.pug
@@ -47,7 +47,7 @@ mixin etherRecipe(header)
       p You can also get some from a friend or purchase it online.
 
     .col-md-6
-      +etherFigure
+      +vaporFigure
 
   .row
     .col-md-6
