--- a/views/mixins/recipes.pug
+++ b/views/mixins/recipes.pug
@@ -9,7 +9,7 @@ mixin gethRecipe(header)
       h3 Install and run the 
         strong Command Line Interface
       p We've built 
-        a(href='https://github.com/ethereum/mist/releases/latest') easy to use graphical tools
+        a(href='https://github.com/vaporyco/mist/releases/latest') easy to use graphical tools
         | , but if you are a developer you probably want to install the command line tools.
 
     .col-md-6
@@ -36,11 +36,11 @@ mixin etherRecipe(header)
 
   .row
     .col-md-6
-      h3 Learn about the ether, the crypto-fuel of the Ethereum network
+      h3 Learn about the ether, the crypto-fuel of the Vapory network
       
-      p Ether is the internal 'fuel' of Ethereum. Programs running on Ethereum need to pay the network for the resources they consume. Volunteers earn this ether by validating transactions, securing the network.
+      p Ether is the internal 'fuel' of Vapory. Programs running on Vapory need to pay the network for the resources they consume. Volunteers earn this ether by validating transactions, securing the network.
 
-      p Alternatively, if you participated in the presale to fund Ethereum's development, or won a reward from the Olympic or 
+      p Alternatively, if you participated in the presale to fund Vapory's development, or won a reward from the Olympic or 
         a(href="https://bounty.ethdev.com/") Bug Bounty 
         | programs, you will have a wallet file (.json) that can be imported and give you access to your ether.
     
@@ -71,7 +71,7 @@ mixin greeterRecipe(header)
 
       p This tutorial will teach you how to build a contract using the command line
 
-      p The greeter is a very simple contract that greets “Hello World” when poked. If you have never created any contracts in Ethereum before, this is where you should start. 
+      p The greeter is a very simple contract that greets “Hello World” when poked. If you have never created any contracts in Vapory before, this is where you should start. 
 
     .col-md-6
       +greeterFigure
@@ -127,9 +127,9 @@ mixin crowdsaleRecipe(header)
     .col-md-6    
       h3 Kickstart a project with a trustless crowdsale
 
-      p Do you already have ideas that you want to develop on Ethereum? Maybe you need help and some funds to bring them to life, but who would lend money to someone they don’t trust?
+      p Do you already have ideas that you want to develop on Vapory? Maybe you need help and some funds to bring them to life, but who would lend money to someone they don’t trust?
 
-      p Using Ethereum, you can create a contract that will hold a contributor's money until any given date or goal is reached. Depending on the outcome, the funds will either be released to the project owners or safely returned back to the contributors. All of this is possible without requiring a centralized arbitrator, clearinghouse or having to trust anyone.
+      p Using Vapory, you can create a contract that will hold a contributor's money until any given date or goal is reached. Depending on the outcome, the funds will either be released to the project owners or safely returned back to the contributors. All of this is possible without requiring a centralized arbitrator, clearinghouse or having to trust anyone.
 
       p You can even use the token you created earlier to keep track of the distribution of rewards.
 
@@ -158,9 +158,9 @@ mixin daoRecipe(header)
 
       p Now that you have developed your idea and secured funds, what’s next? You have to hire managers, find a trustworthy CFO to handle the accounts, run board meetings and do a bunch of paperwork. 
 
-      p Or you can simply leave all that to an Ethereum contract. It will collect proposals from your backers and submit them through a completely transparent voting process.
+      p Or you can simply leave all that to an Vapory contract. It will collect proposals from your backers and submit them through a completely transparent voting process.
 
-      p One of the many advantages of having a robot run your organization is that it is immune to any outside influence as it’s guaranteed to execute only what it was programmed to. And because the Ethereum network is decentralized, you'll be able to provide services with a 100% uptime guarantee. 
+      p One of the many advantages of having a robot run your organization is that it is immune to any outside influence as it’s guaranteed to execute only what it was programmed to. And because the Vapory network is decentralized, you'll be able to provide services with a 100% uptime guarantee. 
     
   .row
     .col-md-6
@@ -183,11 +183,11 @@ mixin futureRecipe(header)
     .col-md-6
       h3 Build a new kind of decentralized application
 
-      p Now it's your turn: start building what you dream of creating in Ethereum! Could your business be enhanced by operating on a cryptographically secure, decentralized, tamper-proof network?
+      p Now it's your turn: start building what you dream of creating in Vapory! Could your business be enhanced by operating on a cryptographically secure, decentralized, tamper-proof network?
 
       p Check out the 
         a(href="https://www.stateofthedapps.com", target="_blank") many great projects
-        | * already being built on Ethereum. And since you'll be among the first developers in the world that are able to program decentralized applications, some of them might need your help. 
+        | * already being built on Vapory. And since you'll be among the first developers in the world that are able to program decentralized applications, some of them might need your help. 
       
       p.small  
         em *The above list is maintained by an independent party and the Foundation does not endorse its content or any particular project
@@ -201,10 +201,10 @@ mixin toc()
 mixin inner-header(title)
   .inner-header.default-header.scrollme(class!=attributes.class)
     .breadcrumb.animateme(data-when="exit", data-from="1", data-to="0.8", data-opacity="0", data-translatey="-20") 
-      a(href="/").index Ethereum  
+      a(href="/").index Vapory  
       | »  
       strong #{title} 
     a(href="/").back « Main page
-    figure.ethereum-logo.animateme(data-when="exit", data-from="0", data-to="1", data-translatey="120", data-opacity="0.5", data-scale="0.6", data-easing="linear")
+    figure.vapory-logo.animateme(data-when="exit", data-from="0", data-to="1", data-translatey="120", data-opacity="0.5", data-scale="0.6", data-easing="linear")
 
     h3.text-center.animateme(data-when="exit", data-from="0", data-to="0.5", data-translatey="30", data-opacity="0", data-scale="0.7", data-easing="linear")  #{title} 
