--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -5,7 +5,7 @@ footer.scrollme
             .col-md-12.news
                 h3 News
                 .iframe-wrapper
-                  a.twitter-timeline(href="https://twitter.com/ethereumproject", data-widget-id="694952013856112640", data-chrome="nofooter noborders transparent noheader", width="100%", height="370px") Tweets by @ethereumproject
+                  a.twitter-timeline(href="https://twitter.com/vaporyco", data-widget-id="694952013856112640", data-chrome="nofooter noborders transparent noheader", width="100%", height="370px") Tweets by @ethereumproject
                   script !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 
           .row.row-footer-primary
@@ -15,11 +15,11 @@ footer.scrollme
                 .col-sm-5
                   ul
                     li
-                      a(href='https://blog.ethereum.org', target='_blank')
+                      a(href='https://blog.vapory.org', target='_blank')
                         i.fa.fa-rss
                         |  Blog
                     li
-                      a(href='https://github.com/ethereum', target='_blank')
+                      a(href='https://github.com/vaporyco', target='_blank')
                         i.fa.fa-github
                         |  GitHub
                     li
@@ -27,17 +27,17 @@ footer.scrollme
                         i.fa.fa-youtube
                         |  YouTube
                     li
-                      a(href='https://www.reddit.com/r/ethereum', target='_blank')
+                      a(href='https://www.reddit.com/r/vapory', target='_blank')
                         i.fa.fa-reddit
                         |  Reddit
                     li
-                      a(href='https://gitter.im/orgs/ethereum/rooms', target='_blank')
+                      a(href='https://gitter.im/orgs/vaporyco/rooms', target='_blank')
                         i.fa.fa-comments-o
                         |  Gitter
                 .col-sm-7
                   ul
                     li
-                      a(href='https://twitter.com/ethereumproject', target='_blank')
+                      a(href='https://twitter.com/vaporyco', target='_blank')
                         i.fa.fa-twitter
                         |  Twitter
                     li
@@ -45,7 +45,7 @@ footer.scrollme
                         i.fa.fa-stack-exchange
                         |  Stack Exchange
                     li
-                      a(href='https://www.facebook.com/ethereumproject', target='_blank')
+                      a(href='https://www.facebook.com/vapory.org', target='_blank')
                         i.fa.fa-facebook
                         |  Facebook                
                     li
